--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             
             <div class="main_right">
-                <img id="imgofme" src="https://lh3.googleusercontent.com/proxy/sklX5ssFxfVG93LTsPw81OgFHd5emTvP0Oxtx3C3Ceak3MhVaRRMNArLn7Dv6lhSWe-HMeb8qXlB9PlDktKXDl_2fP6fbFfXfyaGJLH05FAJD6gS5P0fXzgQSumRxaxsAc6-4iP93Y1ZMJgw1bHN3oKFwuaU6EMjy1361BpP2bDdjtCB" alt="pictureofme" height="330px">
+                <img id="imgofme" src="pictureofman.webp" alt="pictureofme" height="330px">
             </div>
 
         </div>
